# Project-Seoul

./: .gitignore  README.md  package-lock.json  package.json  tsconfig.json
native/: README.md  (+1 more)
native/gn/: macos-arm64-baseline.gn
native/seoul/browser/: BUILD.gn  README.md
native/seoul/browser/canvas/: BUILD.gn  canvas.mojom  seoul_canvas_page_handler.cc  seoul_canvas_page_handler.h  seoul_canvas_ui.cc  seoul_canvas_ui.h
native/seoul/browser/commands/: BUILD.gn  browser_command.cc  browser_command.h  chromium_mutation_adapter.h  chromium_mutation_adapter_browsertest.cc  chromium_mutation_adapter_impl.cc  chromium_mutation_adapter_impl.h  command_completion_observer.h  command_confirmation_seam.cc  command_confirmation_seam.h  command_errors.cc  command_errors.h  command_executor.cc  command_executor.h  command_executor_unittest.cc  command_id.cc  command_id.h  command_types.h  command_validation_unittest.cc  expected_observation.h  expected_observation_registry.cc  expected_observation_registry.h  expected_observation_registry_unittest.cc  live_target_resolver.cc  live_target_resolver.h  model_command_facade.cc  model_command_facade.h  model_command_facade_unittest.cc  target_resolver.cc  target_resolver.h  url_policy.cc  url_policy.h  url_policy_unittest.cc
native/seoul/browser/connectors/: BUILD.gn  capability_importers_unittest.cc  connector.cc  connector.h  connector_registry.cc  connector_registry.h  connector_registry_unittest.cc  fake_connector.cc  fake_connector.h  generic_capabilities.cc  generic_capabilities.h  local_file_capability.cc  local_file_capability.h  mcp_capability_importer.cc  mcp_capability_importer.h  openapi_capability_importer.cc  openapi_capability_importer.h
native/seoul/browser/context/: BUILD.gn  context_thread.cc  context_thread.h  context_thread_unittest.cc
native/seoul/browser/data/: BUILD.gn  data_errors.h  data_validation.cc  data_validation.h  data_validation_unittest.cc  market_data_provider.h  market_types.h  product_types.h  provenance.cc  provenance.h  shopping_provider.h  weather_provider.h  weather_types.h
native/seoul/browser/intelligence/: BUILD.gn  cloud_model_provider.cc  cloud_model_provider.h  credential_store.h  fake_http_transport.cc  fake_http_transport.h  fake_model_provider.cc  fake_model_provider.h  http_transport.cc  http_transport.h  local_model_provider.cc  local_model_provider.h  model_provider.cc  model_provider.h  model_provider_unittest.cc  provider_protocol.cc  provider_protocol.h  provider_protocol_unittest.cc  reasoning_router.cc  reasoning_router.h  reasoning_router_unittest.cc  sse_parser.cc  sse_parser.h  sse_parser_unittest.cc  streaming_accumulator.cc  streaming_accumulator.h
native/seoul/browser/lifecycle/: BUILD.gn  lifecycle_coordinator.cc  lifecycle_coordinator.h  lifecycle_coordinator_unittest.cc  lifecycle_event_sink.h  lifecycle_events.cc  lifecycle_events.h  lifecycle_identity.h  lifecycle_identity_unittest.cc  lifecycle_reconciliation_unittest.cc  lifecycle_rescan_unittest.cc  lifecycle_splits_unittest.cc  live_window_snapshot_types.cc  live_window_snapshot_types.h  live_window_state.cc  live_window_state.h  live_window_state_unittest.cc  persistence_scheduler.cc  persistence_scheduler.h  persistence_scheduler_unittest.cc  session_restore_watcher.cc  session_restore_watcher.h  tab_strip_bridge.cc  tab_strip_bridge.h  window_watcher.cc  window_watcher.h
native/seoul/browser/organization/: BUILD.gn  organization_errors.cc  organization_errors.h  organization_header_unittest.cc  organization_ids.h  organization_invariants_unittest.cc  organization_limits.h  organization_model.cc  organization_model.h  organization_model_unittest.cc  organization_observer.h  organization_recovery_unittest.cc  organization_routing_unittest.cc  organization_splits_unittest.cc  organization_store.cc  organization_store.h  organization_store_unittest.cc  organization_types.cc  organization_types.h  seoul_organization_service.cc  seoul_organization_service.h  seoul_organization_service_factory.cc  seoul_organization_service_factory.h
native/seoul/browser/policy/: BUILD.gn  agent_permission_service.cc  agent_permission_service.h  agent_permission_service_unittest.cc
native/seoul/browser/preview/: BUILD.gn  preview_host_service.cc  preview_host_service.h  preview_manager.cc  preview_manager.h  preview_manager_unittest.cc  preview_types.cc  preview_types.h  seoul_preview_web_view.cc  seoul_preview_web_view.h
native/seoul/browser/product/: BUILD.gn  capability_executor.cc  capability_executor.h  capability_executor_unittest.cc  page_field_safety.cc  page_field_safety.h  page_field_safety_unittest.cc  plan_json.cc  plan_json.h  planner.cc  planner.h  planner_unittest.cc  product_e2e_unittest.cc  provider_registry.cc  provider_registry.h  provider_registry_unittest.cc  realtime_voice_agent.cc  realtime_voice_agent.h  realtime_voice_agent_unittest.cc  surface_service.cc  surface_service.h  surface_service_unittest.cc  task_service.cc  task_service.h  task_service_unittest.cc  task_snapshot_wire.cc  task_snapshot_wire.h  task_snapshot_wire_unittest.cc  task_surface_bridge.cc  task_surface_bridge.h  task_surface_bridge_unittest.cc  thread_service.cc  thread_service.h  thread_workflow_service_unittest.cc  voice_runtime_controller.cc  voice_runtime_controller.h  voice_runtime_controller_unittest.cc  workflow_service.cc  workflow_service.h
native/seoul/browser/projection/: BUILD.gn  projection_calculator.cc  projection_calculator.h  projection_calculator_unittest.cc  projection_errors.cc  projection_errors.h  projection_observer.h  projection_ordering.cc  projection_ordering.h  projection_ordering_unittest.cc  projection_service.cc  projection_service.h  projection_types.cc  projection_types.h  vertical_presentation_adapter.cc  vertical_presentation_adapter.h  vertical_presentation_browsertest.cc  vertical_presentation_filter.cc  vertical_presentation_filter.h  vertical_presentation_filter_unittest.cc  window_projection_controller.cc  window_projection_controller.h  workspace_switcher.cc  workspace_switcher.h  (+1 more)
(+443 files in other folders)
