# Project Seoul grounded data layer.
# Domain-neutral provenance envelope, data errors, and provenance validation.
# Domain result contracts do not exist here: capability results flow through
# the generic semantic fabric (//seoul/browser/semantic). Pure model: //base.

import("//testing/test.gni")

source_set("data_core") {
  sources = [
    "data_errors.h",
    "data_validation.cc",
    "data_validation.h",
    "provenance.cc",
    "provenance.h",
  ]

  deps = [ "//base" ]
}

test("seoul_data_unittests") {
  testonly = true
  sources = [ "data_validation_unittest.cc" ]
  deps = [
    ":data_core",
    "//base",
    "//base/test:run_all_unittests",
    "//base/test:test_support",
    "//testing/gtest",
  ]
}
