# Project Seoul native window/tab lifecycle bridge (INBOUND ONLY).
# Materialized into the checkout at src/seoul/browser/lifecycle/ by
# native/scripts/materialize.sh. Three targets:
#   lifecycle_core - identity, normalized events, coordinator, persistence
#                    scheduler. Chromium-free (deps: //base + the pure model),
#                    so the coordinator is unit-testable without a browser.
#   lifecycle      - the thin Chromium adapters (per-window TabStripModelObserver
#                    and the per-profile window watcher). Chromium UI deps.
#   unit_tests     - tests for the core (the Chromium adapters need a browser and
#                    are exercised by future browser tests, not here).

source_set("lifecycle_core") {
  sources = [
    "lifecycle_coordinator.cc",
    "lifecycle_coordinator.h",
    "lifecycle_event_sink.h",
    "lifecycle_events.h",
    "lifecycle_identity.h",
    "persistence_scheduler.cc",
    "persistence_scheduler.h",
  ]

  # Pure logic: //base and the pure model only. No Browser, no TabStripModel.
  deps = [
    "//base",
    "//seoul/browser/organization:organization_model",
  ]
}

source_set("lifecycle") {
  sources = [
    "tab_strip_bridge.cc",
    "tab_strip_bridge.h",
    "window_watcher.cc",
    "window_watcher.h",
  ]

  deps = [
    ":lifecycle_core",
    "//base",
    "//components/sessions:session_id",
    "//components/sessions/content",
    "//components/split_tabs",
    "//components/tabs/public",
    "//content/public/browser",

    # RESEARCH REQUIRED (resolve at the build host, cannot be verified without GN):
    # the adapters reference chrome/browser/ui/tabs/tab_strip_model.h,
    # chrome/browser/tab_list/tab_removed_reason.h, and
    # chrome/browser/ui/browser_window/public/{browser_collection,
    # browser_window_interface,profile_browser_collection}.h. These belong to
    # //chrome/browser(/ui). This source_set must therefore be wired so it sees
    # those targets without forming a //chrome/browser <-> //seoul cycle (for
    # example by compiling these files as part of //chrome/browser via the
    # integration patch). The integration patch records the chosen option.
    # "//chrome/browser/ui",
  ]
}

source_set("unit_tests") {
  testonly = true
  sources = [
    "lifecycle_coordinator_unittest.cc",
    "lifecycle_identity_unittest.cc",
    "lifecycle_reconciliation_unittest.cc",
    "lifecycle_splits_unittest.cc",
    "persistence_scheduler_unittest.cc",
  ]
  deps = [
    ":lifecycle_core",
    "//base",
    "//base/test:test_support",
    "//seoul/browser/organization:organization_model",
    "//testing/gtest",
  ]
}
