# Project Seoul native window/tab lifecycle bridge (INBOUND ONLY).
# Materialized into the checkout at src/seoul/browser/lifecycle/ by
# native/scripts/materialize.sh.
#
# GN integration uses Chromium's circular-implementation-target pattern:
#   lifecycle_core - identity, events, coordinator (//base + pure model)
#   lifecycle      - Chromium adapters; publicly depends on
#                    //chrome/browser:browser_public_dependencies

import("//testing/test.gni")

source_set("lifecycle_core") {
  sources = [
    "lifecycle_coordinator.cc",
    "lifecycle_coordinator.h",
    "lifecycle_event_sink.h",
    "lifecycle_events.h",
    "lifecycle_identity.h",
    "live_window_snapshot_types.h",
    "persistence_scheduler.cc",
    "persistence_scheduler.h",
  ]

  deps = [
    "//base",
    "//seoul/browser/organization:organization_model",
  ]
}

source_set("lifecycle") {
  sources = [
    "live_window_state.cc",
    "live_window_state.h",
    "session_restore_watcher.cc",
    "session_restore_watcher.h",
    "tab_strip_bridge.cc",
    "tab_strip_bridge.h",
    "window_watcher.cc",
    "window_watcher.h",
  ]

  public_deps = [
    ":lifecycle_core",
    "//chrome/browser:browser_public_dependencies",
  ]

  deps = [
    "//base",
    "//chrome/browser/sessions",
    "//chrome/browser/ui/browser_window",
    "//chrome/browser/ui/tabs",
    "//components/sessions:session_id",
    "//components/sessions",
    "//components/split_tabs",
    "//components/tabs/public",
    "//content/public/browser",
    "//seoul/browser/organization:organization_model",
    "//url",
  ]
}

test("seoul_lifecycle_core_unittests") {
  testonly = true
  sources = [
    "lifecycle_coordinator_unittest.cc",
    "lifecycle_identity_unittest.cc",
    "lifecycle_reconciliation_unittest.cc",
    "lifecycle_rescan_unittest.cc",
    "lifecycle_splits_unittest.cc",
    "persistence_scheduler_unittest.cc",
  ]
  deps = [
    ":lifecycle_core",
    "//base",
    "//base/test:test_support",
    "//seoul/browser/organization:organization_model",
    "//testing/gtest",
  ]
}

test("seoul_lifecycle_state_unittests") {
  testonly = true
  sources = [ "live_window_state_unittest.cc" ]
  deps = [
    ":lifecycle",
    "//base",
    "//base/test:test_support",
    "//testing/gtest",
  ]
}
