# Project Seoul native organization engine.
# Materialized into the checkout at src/seoul/browser/organization/ by
# native/scripts/materialize.sh.
#
# GN integration uses Chromium's circular-implementation-target pattern:
#   organization_model  - pure domain model (//base only)
#   organization        - profile KeyedService + factory; publicly depends on
#                         //chrome/browser:browser_public_dependencies so it may
#                         include Profile headers without a standalone cycle.

source_set("organization_model") {
  sources = [
    "organization_errors.cc",
    "organization_errors.h",
    "organization_ids.h",
    "organization_limits.h",
    "organization_model.cc",
    "organization_model.h",
    "organization_observer.h",
    "organization_store.cc",
    "organization_store.h",
    "organization_types.h",
  ]

  deps = [ "//base" ]
}

source_set("organization") {
  sources = [
    "seoul_organization_service.cc",
    "seoul_organization_service.h",
    "seoul_organization_service_factory.cc",
    "seoul_organization_service_factory.h",
  ]

  public_deps = [
    ":organization_model",
    "//chrome/browser:browser_public_dependencies",
  ]

  deps = [
    "//base",
    "//chrome/browser/profiles:profile",
    "//components/keyed_service/core",
    "//components/pref_registry",
    "//components/prefs",
    "//content/public/browser",
    "//seoul/browser/commands:command_chromium",
    "//seoul/browser/lifecycle",
    "//seoul/browser/lifecycle:lifecycle_core",
    "//seoul/browser/projection:projection_core",
  ]
}

test("seoul_organization_unittests") {
  testonly = true
  sources = [
    "organization_header_unittest.cc",
    "organization_invariants_unittest.cc",
    "organization_model_unittest.cc",
    "organization_recovery_unittest.cc",
    "organization_routing_unittest.cc",
    "organization_splits_unittest.cc",
    "organization_store_unittest.cc",
  ]
  deps = [
    ":organization_model",
    "//base",
    "//base/test:test_support",
    "//testing/gtest",
  ]
}
