# Project Seoul workspace projection engine V0.
#
# projection_core is the projection model (calculators, ordering, filter, the
# workspace switcher, the window projection controller). It touches no Chromium
# UI API directly, but the workspace switcher observes the lifecycle bridge's
# LiveWindowStateProvider, so it depends on //seoul/browser/lifecycle for that
# interface. projection_chromium is the Chromium-facing layer: the presentation
# adapter AND ProjectionService, which holds VerticalPresentationAdapter by
# value and returns views::View*, so it depends on //ui/views.

import("//testing/test.gni")

source_set("projection_core") {
  sources = [
    "projection_calculator.cc",
    "projection_calculator.h",
    "projection_errors.cc",
    "projection_errors.h",
    "projection_observer.h",
    "projection_ordering.cc",
    "projection_ordering.h",
    "projection_types.cc",
    "projection_types.h",
    "vertical_presentation_filter.cc",
    "vertical_presentation_filter.h",
    "window_projection_controller.cc",
    "window_projection_controller.h",
    "workspace_switcher.cc",
    "workspace_switcher.h",
  ]

  deps = [
    "//base",
    "//seoul/browser/commands:command_core",
    "//seoul/browser/lifecycle",
    "//seoul/browser/lifecycle:lifecycle_core",
    "//seoul/browser/organization:organization_model",
    "//url",
  ]
}

source_set("projection_chromium") {
  sources = [
    "projection_service.cc",
    "projection_service.h",
    "vertical_presentation_adapter.cc",
    "vertical_presentation_adapter.h",
  ]

  public_deps = [
    ":projection_core",
    "//chrome/browser:browser_public_dependencies",
  ]

  deps = [
    "//base",
    "//chrome/browser/ui/views/tabs/vertical",
    "//seoul/browser/commands:command_core",
    "//seoul/browser/lifecycle",
    "//seoul/browser/lifecycle:lifecycle_core",
    "//seoul/browser/organization:organization_model",
    "//ui/views",
  ]
}

test("seoul_projection_core_unittests") {
  testonly = true
  sources = [
    "projection_calculator_unittest.cc",
    "projection_ordering_unittest.cc",
    "vertical_presentation_filter_unittest.cc",
    "workspace_switcher_unittest.cc",
  ]
  deps = [
    ":projection_core",
    "//base",
    "//base/test:run_all_unittests",
    "//base/test:test_support",
    "//seoul/browser/commands:command_core",
    "//seoul/browser/lifecycle",
    "//seoul/browser/lifecycle:lifecycle_core",
    "//seoul/browser/organization:organization_model",
    "//testing/gtest",
    "//url",
  ]
}

# In-process browser tests wired into //chrome/test:browser_tests via the
# integration patch.
source_set("projection_browser_tests") {
  testonly = true
  defines = [ "HAS_OUT_OF_PROC_TEST_RUNNER" ]
  sources = [ "vertical_presentation_browsertest.cc" ]
  deps = [
    ":projection_chromium",
    "//chrome/browser:browser_public_dependencies",
    "//chrome/browser/ui/tabs",
    "//chrome/test:test_support",
    "//content/test:test_support",
    "//seoul/browser/lifecycle:lifecycle_core",
    "//seoul/browser/organization",
    "//seoul/browser/organization:organization_model",
    "//testing/gtest",
  ]
}
